tcm/vs/blog-vs.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: VirtualService
metadata:
  name: blog-web
  namespace: default
spec:
  hosts:
  - "hello-world.local"
  gateways:
  - blog-web
  http:
  - match:
    - uri:
        exact: /blog
    route:
    - destination:
        host: blog-web
        port:
          number: 80
