tcm/vs/monitoring.yaml
# apiVersion: gateway.networking.k8s.io/v1beta1
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: monitoring
  namespace: monitoring
spec:
  hosts:
  - "monitoring.test.com"
  gateways:
  - monitoring-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana.monitoring.svc.cluster.local  # service 名称ss
