tcm/vs/prometheus.yaml
# apiVersion: gateway.networking.k8s.io/v1beta1
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: prometheus
spec:
  hosts:
  - "prometheus.test.com"
  gateways:
  - prometheus-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus.prometheus.svc.cluster.local  # service 名称ss
